# Math

./: .gitignore  CMakeLists.txt  notes
docs/: Doxyfile.in  mainpage.dox  namespaces.dox
include/: Math.h  Matrix.h  Transform.h  Vector.h
src/: main.cpp
test/: main.cpp
